--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -9,43 +9,43 @@
 {% from "form.html" import render_field %}
 <form method="POST" action="">
     <div class="form-group">
-        {{render_field(form.id, class_="form-control")}}
+        {{render_field(form.id, class="form-control")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.title, class_="form-control")}}
+        {{render_field(form.title, class="form-control")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.author, class_="form-control")}}
+        {{render_field(form.author, class="form-control")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.average_rating, class_="form-control")}}
+        {{render_field(form.average_rating, class="form-control")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.isbn, class_="form-control")}}
+        {{render_field(form.isbn, class="form-control")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.isbn13, class_="form-control")}}
+        {{render_field(form.isbn13, class="form-control")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.language_code, class_="form-control")}}
+        {{render_field(form.language_code, class="form-control")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.num_pages, class_="form-control")}}
+        {{render_field(form.num_pages, class="form-control")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.ratings_count, class_="form-control")}}
+        {{render_field(form.ratings_count, class="form-control")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.text_reviews_count, class_="form-control")}}
+        {{render_field(form.text_reviews_count, class="form-control")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.publication_date, class_="form-control", type="date")}}
+        {{render_field(form.publication_date, class="form-control", type="date")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.publisher, class_="form-control")}}
+        {{render_field(form.publisher, class="form-control")}}
     </div><br>
     <div class="form-group">
-        {{render_field(form.total_quantity, class_="form-control")}}
+        {{render_field(form.total_quantity, class="form-control")}}
     </div>
     <br>
     <p><button type="submit" class="btn btn-success" value="Submit">Add</button></p>
