--- a/templates/members.html
+++ b/templates/members.html
@@ -10,7 +10,7 @@
 {% if members%}
 <div class="table-responsive">
     <table class="table  table-hover table-striped table-bordered border-dark">
-        <thead class="table-hover table-bordered border-dark  bg-secondary bg-gradient text-center text-light">
+        <thead class="table-hover table-bordered border-dark bg-gradient text-center text-dark" style="background-color: rgb(167, 191, 253);">
             <tr>
                 <th>Member ID</th>
                 <th>Name</th>
