--- a/templates/search.html
+++ b/templates/search.html
@@ -24,7 +24,7 @@
     <h2 >Search Result: </h2>
     <hr>
     <table class="table table-hover table-striped table-bordered border-dark">
-        <thead  class="table-hover table-bordered border-dark  bg-secondary bg-gradient text-center text-light">
+        <thead  class="table-hover table-bordered border-dark  bg-gradient text-center text-dark" style="background-color: rgb(167, 191, 253);">
             <th>Book Id</th>
             <th>Book Title</th>
             <th>Book Author</th>
