--- a/templates/search_member.html
+++ b/templates/search_member.html
@@ -20,7 +20,7 @@
 <br>
 {% if members %}
     <table class="table table-hover table-striped table-bordered border-dark">
-        <thead class="table-hover table-bordered border-dark  bg-secondary bg-gradient text-center text-light">
+        <thead class="table-hover table-bordered border-dark bg-gradient text-center text-dark" style="background-color: rgb(167, 191, 253);">
             <th>Member ID</th>
             <th>Name</th>
             <th>Email ID</th>
