--- a/templates/search_transaction.html
+++ b/templates/search_transaction.html
@@ -20,15 +20,15 @@
 <br>
 {% if transactions %}
     <table class="table table-hover table-striped table-bordered border-dark">
-        <thead class="table-hover table-bordered border-dark  bg-secondary bg-gradient text-center text-light">
-            <th><a href="/sort/id" style="text-decoration: none; color: white;">Transaction ID</a></th>
-            <th><a href="/sort/book_id" style="text-decoration: none; color: white;">Book ID</a></th>
-            <th><a href="/sort/member_name" style="text-decoration: none; color: white;">Member Name</a></th>
-            <th><a href="/sort/per_day_fee" style="text-decoration: none; color: white;">Per Day Rent</a></th>
-            <th><a href="/sort/borrowed_on" style="text-decoration: none; color: white;">Borrowed On</a></th>
-            <th><a href="/sort/returned_on" style="text-decoration: none; color: white;">Returned On</a></th>
-            <th><a href="/sort/total_charge" style="text-decoration: none; color: white;">Total Charge</a></th>
-            <th><a href="/sort/amount_paid" style="text-decoration: none; color: white;">Amount Paid</a></th>
+        <thead class="table-hover table-bordered border-dark bg-gradient text-center text-dark" style="background-color: rgb(167, 191, 253);">
+            <th><a href="/sort/id" style="text-decoration: none; color: black;">Transaction ID</a></th>
+            <th><a href="/sort/book_id" style="text-decoration: none; color: black;">Book ID</a></th>
+            <th><a href="/sort/member_name" style="text-decoration: none; color: black;">Member Name</a></th>
+            <th><a href="/sort/per_day_fee" style="text-decoration: none; color: black;">Per Day Rent</a></th>
+            <th><a href="/sort/borrowed_on" style="text-decoration: none; color: black;">Borrowed On</a></th>
+            <th><a href="/sort/returned_on" style="text-decoration: none; color: black;">Returned On</a></th>
+            <th><a href="/sort/total_charge" style="text-decoration: none; color: black;">Total Charge</a></th>
+            <th><a href="/sort/amount_paid" style="text-decoration: none; color: black;">Amount Paid</a></th>
             <th></th>
         </thead>
         {% for transaction in transactions%}
