--- a/templates/reports.html
+++ b/templates/reports.html
@@ -47,7 +47,7 @@
     </thead>
     {% for book in top_books %}
     <tr class="text-center">
-        <td>{{book['id']}}</td>
+        <td><a href="/book/{{book.id}}" style="text-decoration: none; color: black;">{{book['id']}}</a></td>
         <td>{{book['title']}}</td>
         <td>{{book['author']}}</td>
         <td>{{book['rented_count']}}</td>
